--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -106,6 +106,10 @@ XINTEXT (0->0.7mld),
             ViewBag.Title = "Osoby s největšími obchodními vztahy se státem dle registru smluv ";
             ViewBag.SubTitle = "Za rok 2018";
             break;
+        case 25:
+            ViewBag.Title = "Nejdelší politické zodpovědnosti";
+            ViewBag.SubTitle = "";
+            break;
         default:
             break;
     }
