--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -131,6 +131,10 @@ XINTEXT (0->0.7mld),
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
     @Scripts.Render("~/bundles/highcharts")
+    <script src="/scripts/highcharts-6/highcharts-more.js"></script>
+    <script src="/scripts/highcharts-6/modules/heatmap.js"></script>
+    <script src="/scripts/highcharts-6/modules/treemap.js"></script>
+
 }
 @section breadcrumb
 {
@@ -155,7 +159,7 @@ XINTEXT (0->0.7mld),
         data.Add("nameOfView", view);
     }
 }
-@Html.Action("Report_child",new { routedata = data })
+@Html.Action("Report_child", new { routedata = data })
 
 @Util.FeedbackModal("Poslat opravu či připomínku")
 
