--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -107,7 +107,7 @@ XINTEXT (0->0.7mld),
             ViewBag.SubTitle = "Za rok 2018";
             break;
         case 25:
-            ViewBag.Title = "Nejdelší politické zodpovědnosti";
+            ViewBag.Title = "Které politické strany mají největší odpovědnost za vedení ČR?";
             ViewBag.SubTitle = "";
             break;
         default:
